GCP/backend/s1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currency-exchange-service
  labels:
    app: ces-app
spec:
  selector:
    matchLabels:
      app: ces-app
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ces-app
    spec:
      containers:
      - name: currency-exchange-service
        image: 152512582646.dkr.ecr.us-east-2.amazonaws.com/currency-exchange-service:2.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
