GCP/backend/s1/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ces-app
spec:
  backend:
    serviceName: ces-app
    servicePort: 80
